--- a/app/src/main/res/layout/food_item_layout.xml
+++ b/app/src/main/res/layout/food_item_layout.xml
@@ -46,13 +46,13 @@
 
         <TextView
             android:id="@+id/item_description"
-            android:layout_width="wrap_content"
+            android:layout_width="211dp"
             android:layout_height="wrap_content"
-            android:text="Description"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/item_quantity"
+            android:singleLine="false"
+            android:text="Description"
             app:layout_constraintStart_toEndOf="@+id/item_image"
-            tools:layout_editor_absoluteX="164dp" />
+            app:layout_constraintTop_toBottomOf="@+id/item_quantity" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
