--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -25,7 +25,7 @@
             android:layout_marginTop="15dp"
             android:src="@drawable/ic_profile"
             android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
+            android:scaleType="centerCrop"
             android:layout_gravity="center_horizontal" />
 
 
