--- a/app/src/main/res/layout/view_food_donation.xml
+++ b/app/src/main/res/layout/view_food_donation.xml
@@ -16,13 +16,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:gravity="center_horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/food_photo"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
             android:layout_gravity="center"
             android:layout_marginBottom="15dp"
             android:src="@drawable/ic_profile" />
@@ -31,34 +34,47 @@
             android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Date" />
+            android:text="Date"
+            android:layout_marginBottom="10dp"
+            android:textColor="@color/black"
+            android:textSize="15dp"/>
 
 
         <TextView
             android:id="@+id/food_item_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Item" />
-
-        <TextView
-            android:id="@+id/description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Description" />
-
+            android:text="Item"
+            android:layout_marginBottom="10dp"
+            android:textColor="@color/black"
+            android:textSize="15dp"/>
         <TextView
             android:id="@+id/foodQuanity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="1dp"
-            android:text="Quanity" />
+            android:layout_marginBottom="10dp"
+            android:text="Quanity"
+            android:textColor="@color/black"
+            android:textSize="15dp"/>
+        <TextView
+            android:id="@+id/description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:text="Description"
+            android:textColor="@color/black"
+            android:textSize="15dp"/>
+
+
 
 
         <Button
             android:id="@+id/accept_food_button"
             android:layout_width="wrap_content"
+            android:paddingHorizontal="10dp"
             android:layout_height="45dp"
             android:layout_gravity="center"
+            android:background="@drawable/rounded_button"
             android:layout_marginBottom="390dp"
             android:text="Accept Food" />
 
